edit: ubah route css

--- a/templates/xss.html
+++ b/templates/xss.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XSS Demo - Security Education</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='js/xss.css') }}">
-    <script src="/static/xss.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='xss.css') }}">
+    <script src="/static/js/xss.js"></script>
 </head>
 <body>
     <div class="container">
